--- a/sass/_middle.scss
+++ b/sass/_middle.scss
@@ -2,20 +2,20 @@
   background-color:  inherit;
   grid-row: 2 / -1; 
   grid-column: 1 / -1;
-  margin-bottom: auto;
+  //margin-bottom: auto;
+  //padding: 8rem;
+  display: block;
 }
 
 .gallery {
   list-style: none;
 
   display: grid;
-  grid-template-rows: max-content;
-  //grid-template-columns: min-content;
+  grid-template-rows: repeat(4, 1fr) min-content;
+  grid-template-columns: repeat(auto-fit, minmax(min-content, max-content));
   grid-row-gap: 1rem;
 
   margin-top: 1rem;
-  margin-bottom: 4.5rem;
-  
 
   &__album {
     display: grid;
@@ -26,6 +26,8 @@
       background-size: cover;
       background-position: center;
       height: 50vh;
+
+      grid-row: 1 / 2;
 
       transition: all .2s;
       &:hover {
